--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 /config/secrets.yml
 /config/initializers/secret_token.rb
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
